--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Content Manager</title>
+    <title>Content Manager | Storm Philippa Clarén</title>
   </head>
   <body>
     <!-- Netlify Identity widget -->
